--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -7,14 +7,13 @@ task:
      brew update
      brew install objc-codegenutils objc-run
      brew install python cmake fftw gcc qt5 lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc llvm go
-     mdfind -name macdeployqt >&2
-     find /opt/homebrew/opt/qt@5 >&2
      brew install iltommi/brews/hdf4
-     ls
      mkdir -p build_gcc && cd build_gcc
-     cmake -DCMAKE_CXX_COMPILER=g++-12 -DQt5_DIR=/opt/homebrew/opt/qt@5/lib/cmake/Qt5 -DNEUTRINO_SKIP_PLUGINS=Shell ..
+     cmake -DCMAKE_CXX_COMPILER=g++-12 -DQt5_DIR=/`brew --prefix qt@5`/lib/cmake/Qt5 -DNEUTRINO_SKIP_PLUGINS=Shell ..
      make -j$(sysctl -n hw.ncpu) install
      ../resources/macPackage/prepareapp.sh
-     ls
-     
+     cp Neutrino-MacOS.dmg cp Neutrino-MacOS-arm.dmg
+  dmg_artifacts:
+    path: "build_gcc/Neutrino-MacOS-arm.dmg"
+
 
