fix cirrus-ci artfacts

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -6,13 +6,13 @@ task:
      pwd
      brew update
      brew install objc-codegenutils objc-run
-     brew install python cmake fftw gcc qt5 lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc llvm go
+     brew install git python cmake fftw gcc qt5 lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc llvm go
      brew install iltommi/brews/hdf4
      mkdir -p build_gcc && cd build_gcc
      cmake -DCMAKE_CXX_COMPILER=g++-12 -DQt5_DIR=/`brew --prefix qt@5`/lib/cmake/Qt5 -DNEUTRINO_SKIP_PLUGINS=Shell ..
      make -j$(sysctl -n hw.ncpu) install
      ../resources/macPackage/prepareapp.sh
-     cp Neutrino-MacOS.dmg cp Neutrino-MacOS-arm.dmg
+     cp Neutrino-MacOS.dmg Neutrino-MacOS-arm.dmg
   dmg_artifacts:
     path: "build_gcc/Neutrino-MacOS-arm.dmg"
 
