--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -11,6 +11,8 @@ task:
      cmake -DCMAKE_CXX_COMPILER=g++-12 -DQt5_DIR=/`brew --prefix qt@5`/lib/cmake/Qt5 -DNEUTRINO_SKIP_PLUGINS=Shell ..
      make -j$(sysctl -n hw.ncpu) install
      ../resources/macPackage/prepareapp.sh
+     otool -L dmg_dir/Neutrino.app/Contents/MacOS/Neutrino
+     find dmg_dir/Neutrino.app -name \*.dylib -exec otool -L {} \;
   dmg_artifacts:
     path: "build_gcc/Neutrino-Darwin-arm64.dmg"
 
