--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -14,6 +14,7 @@ task:
      ditto -c -k --sequesterRsrc --keepParent dmg_dir/Neutrino.app Neutrino-Darwin-arm64.zip
   dmg_artifacts:
     path: "build_gcc/Neutrino-Darwin-arm64.dmg"
+  zip_artifacts:
     path: "build_gcc/Neutrino-Darwin-arm64.zip"
 
 
