--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -11,9 +11,8 @@ task:
      cmake -DCMAKE_CXX_COMPILER=g++-12 -DQt5_DIR=`brew --prefix qt@5`/lib/cmake/Qt5 -DNEUTRINO_SKIP_PLUGINS=Shell ..
      make -j$(sysctl -n hw.ncpu) install
      ../resources/macPackage/prepareapp.sh
-  dmg_artifacts:
-    path: "build_gcc/Neutrino-Darwin-arm64.dmg"
-  zip_artifacts:
-    path: "build_gcc/Neutrino-Darwin-arm64.zip"
+     cp Neutrino-Darwin-arm64.* ..
+  m1_artifacts:
+    path: "Neutrino-Darwin-arm64.*"
 
 
