--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -22,7 +22,6 @@ AppImage_task:
     env:
         DEBIAN_FRONTEND: noninteractive
         APPIMAGE_EXTRACT_AND_RUN: 1
-        LD_LIBRARY_PATH: /build/AppDir/usr/lib
 
     # Instructions:
     script: |
@@ -33,7 +32,7 @@ AppImage_task:
       mkdir build && cd build
       cmake -DNEUTRINO_SKIP_PLUGINS='Shell' -DCMAKE_INSTALL_PREFIX=/usr ..
       make install DESTDIR=AppDir
-      ../linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt --output appimage --custom-apprun=../resources/linuxPackage/AppRun
+      LD_LIBRARY_PATH: AppDir/usr/lib ../linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt --output appimage --custom-apprun=../resources/linuxPackage/AppRun
       cp Neutrino-*.AppImage ..
     artifacts:
       path: "Neutrino-*.AppImage"
