--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -32,7 +32,7 @@ AppImage_task:
       mkdir build && cd build
       cmake -DNEUTRINO_SKIP_PLUGINS='Shell' -DCMAKE_INSTALL_PREFIX=/usr ..
       make install DESTDIR=AppDir
-      LD_LIBRARY_PATH: AppDir/usr/lib ../linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt --output appimage --custom-apprun=../resources/linuxPackage/AppRun
+      LD_LIBRARY_PATH=AppDir/usr/lib ../linuxdeploy-x86_64.AppImage --appdir AppDir --plugin qt --output appimage --custom-apprun=../resources/linuxPackage/AppRun
       cp Neutrino-*.AppImage ..
     artifacts:
       path: "Neutrino-*.AppImage"
