--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -84,7 +84,7 @@ Cross32_task:
       make -C mfhdf/libsrc -j 1 install 
       cd ..
       mkdir build && cd build
-      mingw32-cmake ..
+      mingw32-cmake -DNEUTRINO_SKIP_PLUGINS='Function' ..
       make -j2 package
       cp Neutrino*.exe Neutrino*.zip ..
     artifacts:
