--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,22 +23,22 @@ if (GIT_FOUND)
     #How many commits since last version tag
     execute_process(COMMAND ${GIT_EXECUTABLE} describe --match "v[0-9]*\\.[0-9]*" --abbrev=0
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-        OUTPUT_VARIABLE ${PROJECT_NAME}_VERSION_GIT_VER
+        OUTPUT_VARIABLE VERSION_GIT_VER
         OUTPUT_STRIP_TRAILING_WHITESPACE)
 
-    string(REGEX REPLACE "^v([0-9]*)\\.([0-9]*)" "\\1.\\2" ${PROJECT_NAME}_VERSION "${${PROJECT_NAME}_VERSION_GIT_VER}")
+    string(REGEX REPLACE "^v([0-9]*)\\.([0-9]*)" "\\1.\\2" VERSION "${VERSION_GIT_VER}")
 
-    execute_process(COMMAND ${GIT_EXECUTABLE} rev-list --count ${${PROJECT_NAME}_VERSION_GIT_VER}
+    execute_process(COMMAND ${GIT_EXECUTABLE} rev-list --count HEAD
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-        OUTPUT_VARIABLE ${PROJECT_NAME}_VERSION_AHEAD
+        OUTPUT_VARIABLE VERSION_AHEAD
         OUTPUT_STRIP_TRAILING_WHITESPACE)
 
-    set(${PROJECT_NAME}_VERSION_AHEAD "${${PROJECT_NAME}_VERSION}+${${PROJECT_NAME}_VERSION_AHEAD}")
+    set(VERSION_AHEAD "${VERSION}+${VERSION_AHEAD}")
 
     # Get current commit SHA from git
     execute_process(COMMAND ${GIT_EXECUTABLE} rev-parse HEAD
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-        OUTPUT_VARIABLE ${PROJECT_NAME}_VERSION_GIT_SHA
+        OUTPUT_VARIABLE VERSION_GIT_SHA
         OUTPUT_STRIP_TRAILING_WHITESPACE)
 
 endif(GIT_FOUND)
