--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -22,8 +22,8 @@ MacIntel_task:
 #   depends_on: tag
   script: |
      brew update
-     brew install objc-codegenutils objc-run gh
-     brew install git python cmake fftw qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
+     brew install objc-codegenutils objc-run
+     brew install git cmake fftw qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
      brew install iltommi/brews/hdf4
      mkdir -p build_gcc && cd build_gcc
      cmake ..
