--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -23,7 +23,7 @@ MacIntel_task:
   script: |
      brew update
      brew install objc-codegenutils objc-run
-     brew install git cmake fftw qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
+     brew install git cmake fftw qt libomp lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
      brew install iltommi/brews/hdf4
      mkdir -p build_gcc && cd build_gcc
      cmake ..
