--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -8,7 +8,7 @@ MacIntel_task:
   script: |
      brew update
      brew install objc-codegenutils objc-run gh
-     brew install libomp git python cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
+     brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
      brew install iltommi/brews/hdf4
      mkdir -p build_gcc && cd build_gcc
      cmake ..
@@ -22,11 +22,10 @@ MacIntel_task:
 MacM1_task:
   macos_instance:
     image: ghcr.io/cirruslabs/macos-monterey-base:latest
-  depends_on: tag
   script: |
      brew update
      brew install objc-codegenutils objc-run gh
-     brew install git python cmake fftw gcc qt5 lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
+     brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
      brew install iltommi/brews/hdf4
      mkdir -p build_gcc && cd build_gcc
      cmake -DCMAKE_CXX_COMPILER=g++-12 -DQt5_DIR=`brew --prefix qt@5`/lib/cmake/Qt5 ..
