--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -60,12 +60,12 @@ AppImage_task:
 #   script: |
 #     dnf clean all
 #     dnf -y --nogpgcheck update
-#     dnf -y install cmake git mingw32-qt5* mingw32-gcc-c++ mingw32-gcc mingw32-gcc-gfortran mingw32-libgomp mingw32-gsl mingw32-zlib mingw32-nsis unzip wget autoconf automake bash bison bzip2 flex gcc-c++ gdk-pixbuf2-devel gettext git gperf intltool make sed libffi-devel libtool openssl-devel p7zip patch perl pkgconfig python ruby scons unzip wget xz gtk-doc dh-autoreconf mingw32-portablexdr pandoc mingw32-cfitsio
+#     dnf -y install cmake git mingw32-qt6* mingw32-gcc-c++ mingw32-gcc mingw32-gcc-gfortran mingw32-libgomp mingw32-gsl mingw32-zlib mingw32-nsis unzip wget autoconf automake bash bison bzip2 flex gcc-c++ gdk-pixbuf2-devel gettext git gperf intltool make sed libffi-devel libtool openssl-devel p7zip patch perl pkgconfig python ruby scons unzip wget xz gtk-doc dh-autoreconf mingw32-portablexdr pandoc mingw32-cfitsio gh
 #     wget http://www.fftw.org/fftw-3.3.6-pl2.tar.gz
 #     tar -zxvf fftw-3.3.6-pl2.tar.gz
 #     cd fftw-3.3.6-pl2
 #     mingw32-configure --disable-static --enable-shared --enable-threads --with-combined-threads 
-#     make -j $(nproc) bin_PROGRAMS= sbin_PROGRAMS= noinst_PROGRAMS= 
+#     make bin_PROGRAMS= sbin_PROGRAMS= noinst_PROGRAMS= 
 #     make install bin_PROGRAMS= sbin_PROGRAMS= noinst_PROGRAMS=  
 #     cd ..
 #     wget https://support.hdfgroup.org/ftp/HDF/releases/HDF4.2.10/src/hdf-4.2.10.tar.bz2
@@ -77,55 +77,55 @@ AppImage_task:
 #     libtoolize --force
 #     autoreconf --install
 #     mingw32-configure --disable-static --enable-shared --disable-fortran --disable-netcdf LIBS="-lportablexdr -lws2_32"  CPPFLAGS="-DH4_F77_FUNC\(name,NAME\)=NAME -DH4_BUILT_AS_DYNAMIC_LIB=1 -DBIG_LONGS"
-#     make -C mfhdf/xdr -j $(nproc) LDFLAGS=-no-undefined
-#     make -C hdf/src -j $(nproc) LDFLAGS=-no-undefined
-#     make -C hdf/src -j 1 install
-#     make -C mfhdf/libsrc -j $(nproc) LDFLAGS="-no-undefined -ldf"
-#     make -C mfhdf/libsrc -j 1 install 
+#     make -C mfhdf/xdr LDFLAGS=-no-undefined
+#     make -C hdf/src  LDFLAGS=-no-undefined
+#     make -C hdf/src install
+#     make -C mfhdf/libsrc LDFLAGS="-no-undefined -ldf"
+#     make -C mfhdf/libsrc install 
 #     cd ..
 #     mkdir build && cd build
 #     mingw32-cmake -DNEUTRINO_SKIP_PLUGINS='Function' ..
 #     make -j2 package
+#     gh release upload --clobber latest Neutrino*.exe
 #     cp Neutrino*.exe Neutrino*.zip ..
 #   artifacts:
 #     path: "Neutrino-*.*"
 
 
-# Cross64_task:
-#   container:
-#       image: fedora:32
-#   depends_on: tag
-#   script: |
-#     dnf clean all
-#     dnf -y --nogpgcheck update
-#     dnf -y install cmake git mingw64-qt5* mingw64-gcc-c++ mingw64-gcc mingw64-gcc-gfortran mingw64-libgomp mingw64-gsl mingw64-zlib mingw32-nsis unzip wget autoconf automake bash bison bzip2 flex gcc-c++ gdk-pixbuf2-devel gettext git gperf intltool make sed libffi-devel libtool openssl-devel p7zip patch perl pkgconfig python ruby scons unzip wget xz gtk-doc dh-autoreconf mingw64-portablexdr pandoc mingw64-cfitsio
-#     set -e
-#     set -x
-#     wget http://www.fftw.org/fftw-3.3.6-pl2.tar.gz
-#     tar -zxvf fftw-3.3.6-pl2.tar.gz
-#     cd fftw-3.3.6-pl2
-#     mingw64-configure --disable-static --enable-shared --enable-threads --with-combined-threads
-#     make -j $(nproc) bin_PROGRAMS= sbin_PROGRAMS= noinst_PROGRAMS=    
-#     make install bin_PROGRAMS= sbin_PROGRAMS= noinst_PROGRAMS=   
-#     cd ..
-#     wget https://support.hdfgroup.org/ftp/HDF/releases/HDF4.2.10/src/hdf-4.2.10.tar.bz2
-#     tar -jxvf hdf-4.2.10.tar.bz2 && cd hdf-4.2.10
-#     wget https://raw.githubusercontent.com/iltommi/mxe/master/src/hdf4-1-portability-fixes.patch
-#     wget https://raw.githubusercontent.com/iltommi/mxe/master/src/hdf4-2-dllimport.patch
-#     patch -p1 -u < hdf4-1-portability-fixes.patch
-#     patch -p1 -u < hdf4-2-dllimport.patch 
-#     libtoolize --force
-#     autoreconf --install
-#     mingw64-configure --disable-static --enable-shared --disable-fortran --disable-netcdf LIBS="-lportablexdr -lws2_32"  CPPFLAGS="-DH4_F77_FUNC\(name,NAME\)=NAME -DH4_BUILT_AS_DYNAMIC_LIB=1 -DBIG_LONGS"
-#     make -C mfhdf/xdr -j $(nproc) LDFLAGS="-no-undefined -lssp"
-#     make -C hdf/src -j $(nproc) LDFLAGS="-no-undefined -lssp"
-#     make -C hdf/src -j 1 install
-#     make -C mfhdf/libsrc -j $(nproc) LDFLAGS="-no-undefined -ldf"
-#     make -C mfhdf/libsrc -j 1 install
-#     cd ..
-#     mkdir build && cd build
-#     mingw64-cmake ..
-#     make -j2 package
-#     cp Neutrino*.exe Neutrino*.zip ..      
-#   artifacts:
-#     path: "Neutrino-*.*"
+Cross64_task:
+  container:
+      image: fedora:32
+  depends_on: tag
+  script: |
+    dnf clean all
+    dnf -y --nogpgcheck update
+    dnf -y install cmake git mingw64-qt6* mingw64-gcc-c++ mingw64-gcc mingw64-gcc-gfortran mingw64-libgomp mingw64-gsl mingw64-zlib mingw32-nsis unzip wget autoconf automake bash bison bzip2 flex gcc-c++ gdk-pixbuf2-devel gettext git gperf intltool make sed libffi-devel libtool openssl-devel p7zip patch perl pkgconfig python ruby scons unzip wget xz gtk-doc dh-autoreconf mingw64-portablexdr pandoc mingw64-cfitsio gh
+    wget http://www.fftw.org/fftw-3.3.6-pl2.tar.gz
+    tar -zxvf fftw-3.3.6-pl2.tar.gz
+    cd fftw-3.3.6-pl2
+    mingw64-configure --disable-static --enable-shared --enable-threads --with-combined-threads
+    make -j bin_PROGRAMS= sbin_PROGRAMS= noinst_PROGRAMS=    
+    make install bin_PROGRAMS= sbin_PROGRAMS= noinst_PROGRAMS=   
+    cd ..
+    wget https://support.hdfgroup.org/ftp/HDF/releases/HDF4.2.10/src/hdf-4.2.10.tar.bz2
+    tar -jxvf hdf-4.2.10.tar.bz2 && cd hdf-4.2.10
+    wget https://raw.githubusercontent.com/iltommi/mxe/master/src/hdf4-1-portability-fixes.patch
+    wget https://raw.githubusercontent.com/iltommi/mxe/master/src/hdf4-2-dllimport.patch
+    patch -p1 -u < hdf4-1-portability-fixes.patch
+    patch -p1 -u < hdf4-2-dllimport.patch 
+    libtoolize --force
+    autoreconf --install
+    mingw64-configure --disable-static --enable-shared --disable-fortran --disable-netcdf LIBS="-lportablexdr -lws2_32"  CPPFLAGS="-DH4_F77_FUNC\(name,NAME\)=NAME -DH4_BUILT_AS_DYNAMIC_LIB=1 -DBIG_LONGS"
+    make -C mfhdf/xdr LDFLAGS="-no-undefined -lssp"
+    make -C hdf/src LDFLAGS="-no-undefined -lssp"
+    make -C hdf/src install
+    make -C mfhdf/libsrc LDFLAGS="-no-undefined -ldf"
+    make -C mfhdf/libsrc install
+    cd ..
+    mkdir build && cd build
+    mingw64-cmake ..
+    make package
+    gh release upload --clobber latest Neutrino*.exe
+    cp Neutrino*.exe Neutrino*.zip ..      
+  artifacts:
+    path: "Neutrino-*.*"
