--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,8 +38,11 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_BINARY_DIR}/nPhysImage")
 set(LIBS ${LIBS} "nPhysImageF")
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../nPhysImage)
 
-add_definitions(-D__VER="${${PROJECT_NAME}_VERSION_AHEAD}")
-add_definitions(-D__VER_SHA="${${PROJECT_NAME}_VERSION_GIT_SHA}")
+add_definitions(-D__VER="${VERSION_AHEAD}")
+add_definitions(-D__VER_SHA="${VERSION_GIT_SHA}")
+MESSAGE(STATUS "-D__VER=${VERSION_AHEAD}")
+MESSAGE(STATUS "-D__VER_SHA=${VERSION_GIT_SHA}")
+
 
 if (APPLE AND NOT DEFINED Qt6_DIR)
     set(Qt6_DIR "/usr/local/opt/qt/lib/cmake/Qt6")
@@ -102,13 +105,13 @@ set(filedeps ${SOURCES} ${UIS} ${ICONS_QRC} ${LICENSES_QRC} ${CMAP_QRC})
 if(APPLE)
 
     set(MACOSX_BUNDLE_EXECUTABLE_NAME "${PROJECT_NAME}")
-    set(MACOSX_BUNDLE_INFO_STRING "${PROJECT_NAME} ${${PROJECT_NAME}_VERSION}")
+    set(MACOSX_BUNDLE_INFO_STRING "${PROJECT_NAME} ${VERSION}")
     set(MACOSX_BUNDLE_GUI_IDENTIFIER "${PROJECT_DOMAIN_SECOND}.${PROJECT_DOMAIN_FIRST}")
 
     set(MACOSX_BUNDLE_BUNDLE_NAME "${PROJECT_NAME}")
-    set(MACOSX_BUNDLE_BUNDLE_VERSION "${${PROJECT_NAME}_VERSION_AHEAD}")
-    set(MACOSX_BUNDLE_SHORT_VERSION_STRING "${${PROJECT_NAME}_VERSION}")
-    set(MACOSX_BUNDLE_LONG_VERSION_STRING "${${PROJECT_NAME}_VERSION_AHEAD} sha: ${${PROJECT_NAME}_VERSION_GIT_SHA}")
+    set(MACOSX_BUNDLE_BUNDLE_VERSION "${VERSION_AHEAD}")
+    set(MACOSX_BUNDLE_SHORT_VERSION_STRING "${VERSION}")
+    set(MACOSX_BUNDLE_LONG_VERSION_STRING "${VERSION_AHEAD} sha: ${VERSION_GIT_SHA}")
     set(MACOSX_BUNDLE_COPYRIGHT "Copyright ${PROJECT_COPYRIGHT_YEAR} Tommaso Vinci, Alessandro Flacco. GNU General Public License v2.0")
 
     set(MACOSX_BUNDLE_ICON_FILE icon.icns)
