--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,7 +5,7 @@ MacIntel_task:
   script: |
     brew update
     brew install objc-codegenutils objc-run gh
-    brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
+    brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc create-dmg
     brew install iltommi/brews/hdf4
     mkdir -p build_gcc && cd build_gcc
     cmake ..
@@ -23,7 +23,7 @@ MacM1_task:
   script: |
     brew update
     brew install objc-codegenutils objc-run gh
-    brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
+    brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc create-dmg
     brew install iltommi/brews/hdf4
     mkdir -p build_gcc && cd build_gcc
     cmake ..
