--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,7 +5,7 @@ MacIntel_task:
   script: |
     brew update
     brew install objc-codegenutils objc-run gh
-    brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc create-dmg
+    brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
     brew install iltommi/brews/hdf4
     mkdir -p build_gcc && cd build_gcc
     cmake ..
@@ -14,7 +14,7 @@ MacIntel_task:
     gh release upload --clobber latest Neutrino-`uname -s`-`uname -m`.dmg
     cp Neutrino-`uname -s`-`uname -m`.dmg ..
   artifacts:
-    path: "Neutrino-Darwin-*.dmg"
+    path: "Neutrino-Darwin-*.zip"
 
 MacM1_task:
   only_if: $CIRRUS_BRANCH == 'master'
@@ -23,7 +23,7 @@ MacM1_task:
   script: |
     brew update
     brew install objc-codegenutils objc-run gh
-    brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc create-dmg
+    brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio hdf5 gsl clfft pandoc
     brew install iltommi/brews/hdf4
     mkdir -p build_gcc && cd build_gcc
     cmake ..
@@ -32,7 +32,7 @@ MacM1_task:
     gh release upload --clobber latest Neutrino-`uname -s`-`uname -m`.dmg
     cp Neutrino-`uname -s`-`uname -m`.dmg ..
   artifacts:
-    path: "Neutrino-Darwin-*.dmg"
+    path: "Neutrino-Darwin-*.zip"
 
 AppImage_task:
   only_if: $CIRRUS_BRANCH == 'master'
