--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,9 +25,11 @@ if (GIT_FOUND)
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
         OUTPUT_VARIABLE VERSION_GIT_VER
         OUTPUT_STRIP_TRAILING_WHITESPACE)
+	message(STATUS "VERSION_GIT_VER ${VERSION_GIT_VER}")
 
     string(REGEX REPLACE "^v([0-9]*)\\.([0-9]*)" "\\1.\\2" VERSION "${VERSION_GIT_VER}")
-
+	message(STATUS "VERSION ${VERSION}")
+	
     execute_process(COMMAND ${GIT_EXECUTABLE} rev-list --count HEAD
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
         OUTPUT_VARIABLE VERSION_AHEAD
